<resources>
    <string name="app_name">MeowMinder</string>

    <string name="empty">Empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="today_tasks">Today tasks</string>
    <string name="quote">If you can dream it, you can do it!</string>
    <string name="no_task">No task to be \ndone today</string>

    <string name="study">Study</string>

    <string name="add_tasks">Add tasks</string>

    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tasks">Tasks</string>
    <string name="alarm">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="select_ringtone">Select ringtone</string>
    <string name="ringtone">Ringtone</string>

    <string name="input">Input here</string>
    <string name="add">Add</string>
    <string name="back">Back</string>

    <string name="channel_name">Test</string>
    <string name="channel_description">This is a test notification</string>

    <string name="cancel">Cancel</string>

    <string name="dummy">You have completed 3 \nout of 5 of your goals</string>

    <string name="to_do">TO DO</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="edit">Edit</string>

    <string name="delete">Delete</string>

    <string name="no_notification">No notification</string>

    <string name="reset">Reset</string>
    <string name="overdue_tasks">Overdue tasks</string>
</resources>