<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    android:orientation="vertical"
    tools:context=".Alarm">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/alarm_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="@font/oswald_semi_bold"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_regular"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:ellipsize="end"
        android:maxLines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy"
        android:fontFamily="@font/oswald_medium"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <ImageButton
        android:id="@+id/complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/complete_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/pink"
        android:textSize="@dimen/_30ssp"
        android:fontFamily="@font/oswald_semi_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_15sdp"/>

</LinearLayout>