<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    tools:context=".EditNote">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_note_header"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/add_note_bg"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="@dimen/_20ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_semi_bold"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/pink"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:drawableRight="@drawable/ic_edit"
                    android:drawableTint="@color/pink"
                    android:backgroundTint="@color/pink"
                    android:textColor="@color/brown"
                    android:inputType="text"
                    android:textSize="@dimen/_15ssp"
                    android:fontFamily="@font/oswald_regular"
                    android:hint="@string/input"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/_20ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_semi_bold"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/pink"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/date"
                    android:layout_width="@dimen/_160sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:drawableRight="@drawable/ic_edit"
                    android:drawableTint="@color/pink"
                    android:backgroundTint="@color/pink"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/_15ssp"
                    android:fontFamily="@font/oswald_regular"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="@dimen/_20ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_semi_bold"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/pink"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/time"
                    android:layout_width="@dimen/_160sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:drawableRight="@drawable/ic_edit"
                    android:drawableTint="@color/pink"
                    android:backgroundTint="@color/pink"
                    android:textColor="@color/brown"
                    android:inputType="time"
                    android:textSize="@dimen/_15ssp"
                    android:fontFamily="@font/oswald_regular"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks"
                    android:textSize="@dimen/_20ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/oswald_semi_bold"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/pink"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cat_2"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_15sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/task_rcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:nestedScrollingEnabled="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_15sdp">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/task_input"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_edit"
                android:drawableTint="@color/pink"
                android:backgroundTint="@color/pink"
                android:textColor="@color/brown"
                android:inputType="text"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="@font/oswald_regular"
                android:hint="@string/input"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:text="@string/add"
                android:fontFamily="@font/oswald_medium"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/_25sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/oswald_semi_bold"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/pink"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_alarm"
                    android:fontFamily="@font/oswald_light"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"/>

                <Switch
                    android:id="@+id/alarm_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:track="@drawable/custom_track"
                    android:thumb="@drawable/custom_thumb"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_20sdp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ringtone_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_15sdp"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_ringtone"
                    android:fontFamily="@font/oswald_light"
                    android:textColor="@color/brown"
                    android:textSize="@dimen/_20sdp"
                    android:layout_gravity="center_vertical"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:hint="@string/ringtone"
                    android:textColorHint="@color/pink"
                    android:backgroundTint="@color/pink"
                    android:layout_marginStart="@dimen/_5sdp"
                    app:boxStrokeColor="@color/dropdown_box"
                    app:hintTextColor="@color/pink"
                    app:endIconTint="@color/pink"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:textColor="@color/pink"
                        android:textSize="@dimen/_10ssp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/done_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"/>

        <TextView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/pink"
            android:textSize="@dimen/_40ssp"
            android:fontFamily="@font/oswald_semi_bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_15sdp"/>

        <TextView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/pink"
            android:textSize="@dimen/_40ssp"
            android:fontFamily="@font/oswald_semi_bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_15sdp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>